# warpspeed

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  NOTES  README.md  TODO  build.rs  t.d
experiment/: t  t.c
lldb/: README.md  mrr.py
lldb/src/recordable/: recordable_pb2.py
lldb/src/recordable/mach_trap/: mach_trap_pb2.py
lldb/src/recordable/scheduling/: scheduling_pb2.py
lldb/src/recordable/syscall/: syscall_pb2.py
pmu/: .gitignore  Makefile  replay_test.c  replay_test.h  t.c
pmu/pmu/: pmu.c
pmu/pmu.xcodeproj/: project.pbxproj
pmu/pmu.xcodeproj/project.xcworkspace/xcuserdata/nickgregory.xcuserdatad/: UserInterfaceState.xcuserstate
pmu/pmu.xcodeproj/xcuserdata/nickgregory.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: cargo-test-signed.sh  codesign-runner.sh
src/: cli.rs  dtrace.rs  lib.rs  mach.rs  mach_ext.rs  main.rs  mig.rs  record.rs  replay.rs  shared_files.rs  syscall.rs  util.rs
src/demos/: kdebug_blocking.rs
src/dtrace/: mod.rs
src/interpose/: lib.rs
src/kdebug/: mod.rs
src/kpc/: bindings.rs  kpc.c  kpc.h  mod.rs
src/mach/: bindings.rs  mod.rs
src/mach/mig/: mod.rs
src/recordable/: mod.rs  recordable.proto  side_effect.proto  side_effects.proto
src/recordable/mach_trap/: mach_trap.proto  mod.rs  trapno.rs
src/recordable/scheduling/: mod.rs  scheduling.proto
src/recordable/syscall/: mach_traps.rs  mig.rs  mod.rs  syscall.proto  syscall.rs  sysno.rs
src/syscall/: mod.rs
src/warpspeed/: loader_ffi.rs  mod.rs
src/warpspeed/loader/: loader.c  loader.h
test/: Makefile  echo  echo.c  interpose.sh  mmap_shared  mmap_shared.c  multithread  multithread.c  rand  rand.c  time  time.S  time.c
tests/: date_record_replay.rs  mmap_shared_record_replay.rs
warpspeed/: .gitignore  Cargo.toml  HelloWorld.S  HelloWorld.c  ISSUES  Makefile  common.h  commpage.c  commpage.h  dyld_cache_format.h  loader.c  loader.h  print_helpers.h  setup_qemu.sh  shared_cache.c  shared_cache.h  syscall_t.S  test.S  vm.c
warpspeed/src/: main.rs
warpspeed/warpspeed_rs/: Cargo.toml  Makefile  build.rs
warpspeed/warpspeed_rs/src/: main.rs
warpspeed/warpspeed_rs/src/macho_loader/: loader_ffi.rs  mod.rs
