[package]
name = "mrr"
version = "0.1.0"
edition = "2021"

[dependencies]
#hyperpom = { git = "https://github.com/kallsyms/hyperpom" }
hyperpom = {path = "../hyperpom"}
clap = {version = "4.2.7", features = ["derive"]}
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
nix = "0.26.2"
prost = "0.11.8"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.76"
prost-build = "0.11.8"

[[bin]]
name = "mrr"
path = "src/main.rs"

[[bin]]
name = "demo_kdebug_blocking"
path = "src/demos/kdebug_blocking.rs"