[package]
name = "warpspeed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
appbox = { git = "https://github.com/kallsyms/appbox" }
clap = { version = "4.2.7", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
nix = "0.26.2"
prost = "0.11.8"
time = "0.3.35"

[build-dependencies]
bindgen = "0.63.0"
prost-build = "0.11.8"

[[bin]]
name = "warpspeed"
path = "src/main.rs"
