[package]
name = "warpspeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
mach_object = "0.1.17"
nix = "0.26.2"
xhypervisor = "0.2.0"
