[package]
name = "warpspeed_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
#hyperpom = { git = "https://github.com/kallsyms/hyperpom" }
hyperpom = {path = "../../../hyperpom"}
clap = {version = "4.2.7", features = ["derive"]}
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
mach_object = "0.1.17"
nix = "0.26.2"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.76"